bug fixed. text wrap was fixed in history page.

--- a/data/style.css
+++ b/data/style.css
@@ -510,6 +510,8 @@ header p {
     flex-grow: 1;
     text-align: right;
     font-size: 1.1em;
+    word-break: break-word;
+    overflow-wrap: anywhere;
 }
 
 /* --- Settings Group Styles --- */
